fix: swiper pagination size and spacing

--- a/day2024-layout-for-mobile/less/styles.less
+++ b/day2024-layout-for-mobile/less/styles.less
@@ -28,6 +28,8 @@
   --color-text-accent: crimson;
   --color-border: #a0a0a0;
   --color-border-darker: #e9e9e9;
+  --swiper-pagination-bullet-size: 2vw;
+  --swiper-pagination-bottom: 2vw;
   --swiper-pagination-bullet-inactive-color: var(--color-text-secondary);
   --swiper-pagination-color: var(--color-text-accent);
 }
